Saving Music to bin

--- a/MusicPlayer.csproj
+++ b/MusicPlayer.csproj
@@ -81,5 +81,8 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Music\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
